--- a/style/add-package.css
+++ b/style/add-package.css
@@ -1,149 +1,66 @@
 /*Reset*/
 @made by kami;
 @charset "utf-8";
-
-.back{
-	width: 100%;
-	height: auto;
-	float: left;
-	text-align: left;
-	padding: 20px 0;
-}
-.back a{
-	background: #ffffff;
-	color: #666666;
-	border: 1px solid #06be94;
-	padding: 5px 15px; 
-	border-radius: 5px;
-	float: left;
-}
-.back a:hover{
-	background: #06be94;
-	color: #ffffff;
-}
-.page-name{
-	width: 100%;
-	height: auto;
-	background: #06be94;
-	color: #ffffff;
-	font-size: 16px;
-	text-align: left;
-	text-indent: 15px;
-	line-height: 40px;
-	float: left;
-}
-.add-package{
-	width: 1018px;
-	_width:1020px;
-	height: auto;
-	float: left;
+.content{padding: 0 2%;}
+ 
+/* 基本信息  大类*/ 
+.add-package{ 
+	width: 100%; 
+	height: auto; 
 	padding: 50px 0;
-	border: 1px solid #e1e1e1;
+	border-top: 1px solid #D5E4EE;
+	padding: 25px 0 40px 0;
 }
 .add-package .line{
 	width: 100%;
-	height: auto;
-	float: left;
-	padding: 10px 0;
+	height: auto; 
+	margin: 10px 0; 
 }
 .add-package .line .line-l{
-	width: 270px;
+	width: 24%;
 	height: 30px;
 	float: left;
 	text-align: right;
-	line-height: 30px;
+	line-height: 30px; 
+	color: #97A0A0;
+	margin: 5px 0;
 }
 .add-package .line .line-r{
-	width: 720px;
+	width: 50%;
 	height: auto;
 	float: left;
 	text-align: left;
 	line-height: 30px;
-	margin-left: 5px;
-}
-.price-box{
-	float: left;
-	width: 220px;
-}
-.price-box em{
-	color: #06be94;
-}
-.input-box{
-	float: left;
-}
-.long-input-box .input{
-	width: 533px;
-}
-.price-box .input{
-	width: 80px;
-}
-.price-tips{
-	width: 75%;
-	height: auto;
-	float: left;
-	line-height: 20px;
-	padding: 5px;
-	background: #fefde8;
-	font-size: 12px;
-	color: #7a754e;
-	margin-top: 10px;
-	border: 1px solid #f6e5b7;
-}
-.sex{
-	float: left;
-	margin-right: 20px;
-}
-.sex input{
-	margin: 10px 5px 0 0;
-	float: left;
-}
-.reservation{
-	float: left;
-	margin-right: 20px;
-}
-.reservation input{
-	margin-right: 5px;
-}
-.reservation-input{
-	float: left;
-	margin-left: -10px;
-	display: none;
-	color: #06be94;
-}
-.reservation-input .input{
-	width: 15px;
-	margin: 0 5px;
-	text-align: center;
-}
-.input{
-	padding: 0 10px;
-	height: 28px;
-	line-height: 28px;
-	border: 1px solid #e5e5e5;
-	text-align: left;
-	width: 110px;
-	border-radius: 3px;
-}
-input:focus.input{
-	box-shadow: 0 0 5px #e1e1e1;
-	border-color: #cdcdcd;
-}
-.drop-down{
+	margin-left: 25px; 
+}  
+
+/* 圆角 */
+.radius{border-radius: 5px;}
+/* 套餐名称  */
+.long-input-box{width: 75%;float: left;}
+.long-input-box .input{margin: 5px 0;height: 30px;width: 100%;border: 1px solid #E9EEEF;box-sizing: border-box;padding-left: 15px;background: #F7F8F9;}
+/* 错误提示 */
+.error-tips{float: left;color: #cc0000;margin: 5px 0 5px 10px;} 
+/* 套餐类别 */
+.drop-down{ 
 	position: relative;
 	width: 95px;
-	height: 28px;
+	height: 30px;
+	line-height: 30px;
 	float: left;
-	border: 1px solid #e5e5e5;
-	border-radius: 3px;
+	border: 1px solid #e5e5e5; 
+	color: #97A0A0;
 }
-.long-drop-down{
-	width: 553px;
-	text-indent: 10px;
+.long-drop-down{  
+	width: 45%;
+	box-sizing: border-box;
+	padding-left: 15px;
+	background: #F7F8F9;
+	margin: 5px 0;
 }
 .drop-down .select{
-	width: 100%;
-	line-height: 28px;
-	cursor: pointer;
+	width: 100%; 
+	cursor: pointer;  
 }
 .drop-down .select-list{
 	position: absolute;
@@ -163,6 +80,9 @@ input:focus.input{
 .drop-down .select-list li{
 	border-top: 1px solid #e5e5e5;
 	cursor: pointer;
+	box-sizing: border-box;
+	padding-left: 15px;
+	background: #F7F8F9;
 }
 .drop-down .select-list li:hover{
 	background: #f8f8f8;
@@ -176,51 +96,110 @@ input:focus.input{
 	right: 10px;
 	background: url(../images/icon.png) no-repeat -178px -66px;
 }
+/* 套餐价格 */
+.price-box{
+	float: left; 
+	margin: 5px 25px 5px 0;
+	line-height: 30px;
+}
+.price-box input{border: 1px solid #E9EEEF;border-radius: 6px;height: 30px;line-height: 30px;text-align: center;width: 75px;background: #F7F8F9;margin: 0 5px;}
+.price-box em{
+	color: #EF704E;
+}
+.input-box{
+	float: left;
+} 
+.price-tips{
+	box-sizing: border-box;
+	width: 100%;
+	height: auto;
+	float: left; 
+	padding: 5px;
+	background: #F2F1EF;
+	font-size: 12px;
+	color: #7a754e;
+	margin: 10px 0;
+	border: 1px solid #EEEDEB;
+}
+.price-tips span{color: #000000;}
+/* 适用人群 */
+.sex{  
+	float: left;
+	margin: 5px 50px 5px 0; 
+}
+.sex input{
+	margin: 8px 15px 0 0;
+	float: left;
+}
+/* 是否需要预约 */
+.reservation{ 
+	float: left;
+	margin: 5px 50px 5px 0; 
+}
+.reservation label{float: left;}
+
+.reservation input[type="radio"]{ 
+	float: left;
+	margin: 8px 15px 0 0;
+}
+.reservation-input{
+	float: left; 
+	display: none;
+	color: #06be94;
+	margin: 5px 0;
+}
+.reservation-input .input{
+	width: 26px; 
+	text-align: center;
+	border: 1px solid #EEEDEB;
+	margin: 0 5px;
+} 
+ 
 .show .icon-dropdown{
 	background-position: -178px -55px;
 }
-.error-tips{
-	color: #cc0000;
-	margin-left: 10px;
-}
-.package-img-check{
+
+/* 套餐封面  */
+.package-img-check{ 
 	width: 100%;
-	height: auto;
-	float: left;
+	height: auto; 
 }
-.package-img-check label{
-	margin-right: 20px;
+.package-img-check label{ 
+	float: left;
+	margin: 5px 50px 5px 0;
 }
 .package-img-check label input{
-	margin-right: 5px;
-}
-.system-img{
-	width: 560px;
-	height: auto;
+	margin: 8px 15px 0 0;
 	float: left;
-	border-top: 1px solid #e5e5e5;
+}
+/* 系统图片 */
+.system-img{
+	width: 100%;
+	height: auto; 
+	/*border: 1px solid #e5e5e5;*/
 	margin-top: 10px;
 	padding-bottom: 7px;
 	position: relative;
 }
 .system-img .no-style{
-	padding-top: 15px;
+	padding-top: 10px;
 	color: #cc0000;
 }
 .system-img .system-img-list{
+	box-sizing: border-box;
 	display: none;
 	width: 100%;
-	height: 165px;
-	float: left;
-	overflow-y: auto;
-	padding-top: 5px;
+	height: 155px; 
+	overflow-y: auto; 
 }
 .system-img .system-img-list li{
+	box-sizing: border-box;
 	float: left;
-	width: 120px;
+	width: 23%;
 	border:2px solid #ffffff;
-	margin: 5px 10px 5px 0;
+	margin: 6px 2% 6px 0;
 }
+.system-img .system-img-list li:nth-of-type(4n){margin-right: 0;}
 .system-img .system-img-list li.on{
 	border-color: #06be94;
 }
@@ -241,165 +220,162 @@ input:focus.input{
 .system-img .viewImg img{
 	float: left;
 }
+/* 上传图片 */
 .diy-img{
-	width: 560px;
-	height: auto;
-	float: left;
-	border-top: 1px solid #e5e5e5;
-	margin-top: 10px;
-	padding-top: 20px;
+	width: 100%;
+	height: auto;  
+	margin-top: 15px; 
 	display: none;
+} 
+.diy-img .upload{
+	box-sizing: border-box;
+	display: block;
+	float: left; 
+	border: 1px dashed #CCCCCC;
+	width: 60px;
+	height: 60px;
+	background: url(../images/add-package/upload.png)no-repeat center; 
 }
-.diy-img .filesurl{
-    width: 460px;
-    height: 30px;
-	line-height: 30px;
-    float: left;
-    text-align: left;
-    border: 1px solid #e5e5e5;
-    background: #f8f8f8;
-    text-indent: 10px;
-}
-.diy-img a.upload{
-	border:1px solid #e5e5e5;
-	line-height: 30px;
-	padding: 0 10px;
-	border-radius: 3px;
-	float: left;
-	margin-left: 20px;
-}
-.diy-img a:hover.upload{
-	background: #06be94;
-	border-color: #06be94;
-	color: #ffffff;
-}
-textarea{
-	border: 1px solid #e5e5e5;
-	background: #ffffff;
-	text-align: left;
-	border-radius: 3px;
-}
-textarea:focus{
-	box-shadow: 0 0 5px #e1e1e1;
-	border-color: #cdcdcd;
-}
-.proposal{
-	width: 540px;
-	height:110px;
-	padding:10px;
-	padding-bottom:0;
-	line-height:20px;
-	resize:none;
-	overflow-y: hidden;
-	font-size: 14px;
-	float: left;
-}
+.diy-img .upload:hover{
+	border-color: #7E8383;
+} 
+.diy-img .upload-box{float: left;height: 60px;margin-left: 25px;}
+.upload-img{height: 100%;}
+ 
+ 
+/* package-box */
+.package-box{/*border: 1px solid #000000;*/}
 .department{
 	width: 100%;
-	height: auto;
-	float: left;
-	margin-bottom: 2px;
+	height: auto; 
+	/*margin-bottom: 2px;*/
+	background: #FFFFFF;
+	border-radius: 5px; 
+	margin-bottom: 20px;
 }
+/* 科目名称 */
 .department .department-name{
-	width: 560px;
-	height: 30px;
-	line-height: 30px;
-	float: left;
-	background: #06be94;
-	color: #ffffff;
-	font-size: 16px;
-	text-indent: 10px;
-	cursor: pointer;
-}
-.department .department-name span{
-	font-size: 14px;
-	margin-left: 10px;
-}
-.department .department-name span em{
-	margin: 0 3px;
-}
-.department .department-name i{
-	width: 18px;
+	width: 100%;
+	height: 50px;
+	line-height: 50px;  
+	color: #000;
+	font-size: 16px; 
+	text-align: left;
+	text-indent: 15px;
+	cursor: pointer; 
+} 
+.department .department-name i{ 
+	width: 17px;
 	height: 10px;
 	float: right;
 	overflow: hidden;
-	margin: 11px 10px 0 0;
-	background: url(../images/icon.png) no-repeat -112px -145px;
-}
+	margin: 21px 15px 0 0;
+	background: url(../images/add-package/open.png) no-repeat 0 0;
+}  
 .department .show i.icon-show{
-	background: url(../images/icon.png) no-repeat -86px -145px;
+	background: url(../images/add-package/open.png) no-repeat 0 -36px;
 }
+/* 科目内容 */
 .department .department-list{
-	width: 562px;
-	height: auto;
-	float: left;
-	display: none;
-	padding-bottom: 10px;
-}
-.department .department-list .row{
+	border-top: 1px solid #D5E4EE;
 	width: 100%;
-	height: auto;
-	float: left;
+	height: auto; 
+	display: none;
+	padding: 25px 0 40px 0;
 }
-.department .department-list .row .column-name{
-	width: 32%;
+.department .department-list .row{ 
+	width: 100%;
+	height: auto;  
+}
+/* 科目分类名称 */
+.department .department-list .row .column-name{ 
 	float: left;
-	height: auto;
+	height: 40px;
 	line-height: 40px;
-	text-align: center;
+	text-align: left ;
+	text-indent: 15px;
 	font-weight: bold;
+	background: #4CA3DC;  
+	color: #FFFFFF;
+	border-top-left-radius: 6px;
+	border-top-right-radius: 6px;
 }
-.department .department-list .row .class-name,.department .department-list .row .item,.department .department-list .row .chose{
-	width: 150px;
-	height: 200px;
+.department .department-list .row .column-all{box-sizing: border-box;width: 35%;margin-left: 19%;}
+.department .department-list .row .column-sel{box-sizing: border-box;width: 19%;margin-left: 7%;}
+
+/* 科目分类内容 */
+.department .department-list .row .class-name,.department .department-list .row .item,.department .department-list .row .chose{ 
 	float: left;
 	overflow-y: auto;
-	border: 1px solid #e5e5e5;
-	margin-left:10px;
+	border: 1px solid #e5e5e5; 
+	height: 280px;
+	text-align: left;
+	box-sizing: border-box; 
+	border-top: none;
 }
-.department .department-list .row .to{
-	width: auto;
-	float: left;
-	height: 200px;
-	line-height: 200px;
-	text-align: center;
-	margin-left:10px;
-}
+/* 选择类目一 */
+.department .department-list .row .class-name{margin-left: 19%;width: 15%;border-right: none;background: #ECECEC;border-bottom-left-radius: 6px;} 
+/* 选择类目二 */
+.department .department-list .row .item{margin-left: 0;width: 20%;background: #FBFBFB;border-bottom-right-radius: 6px;padding: 0 15px;} 
+/* 已选择类目 */
+.department .department-list .row .chose{margin-left: 7%;width: 19%;background: #FBFBFB;border-bottom-right-radius: 6px;border-bottom-left-radius: 6px;}
+ 
 .department .department-list .row li{
-	padding: 0 10px;
+	box-sizing: border-box;
+	height: 40px;
+	line-height: 40px;
+	padding: 0 20px;
 	cursor: default;
 	overflow: hidden;
 	white-space: nowrap;
-	text-overflow: ellipsis;
+	text-overflow: ellipsis; 
+	border-bottom: 1px solid #e5e5e5;
 }
+.department .department-list .row .item li{padding: 0 10px;}
 .department .department-list .row li:hover{
-	background: #f1f1f1;
+	background: #FBFBFB;
 }
 .department .department-list .item ul{
 	display: none;
 }
 .department .department-list .item li i{
-	width: 8px;
-	height: 8px;
+	width: 10px;
+	height: 10px;
 	float: left;
 	border: 1px solid #cccccc;
 	background: #ffffff;
-	margin: 11px 5px 0 -5px;
+	margin: 14px 11px 0 0;
 }
-.department .department-list .class-name li.on,.department .department-list .item li i.on{
-	background: #06be94;
-	color: #ffffff;
+.department .department-list .class-name li.on{ 
+	background: #FBFBFB;
+	color: #67AEDF;
 }
+.department .department-list .item li i.on{background: #06be94;}
+.department .department-list .item li.on{background: #FBFBFB;}
 .department .department-list .chose li i{
 	width: 10px;
 	height: 10px;
 	overflow: hidden;
-	float: left;
+	float: right;
 	background: url(../images/icon.png) no-repeat -143px -145px;
-	margin: 11px 5px 0 -5px;
+	margin: 15px 0 0 0;
 	cursor: pointer;
 }
-.add-package a.save{
+/* 套餐简介 */
+.proposal{
+	font-family: "微软雅黑";
+	box-sizing: border-box;
+	width: 100%;
+	height:110px;
+	padding:10px; 
+	line-height:20px;
+	resize:none;
+	/*overflow-y: hidden;*/
+	font-size: 12px; 
+	background: #F7F8F9;
+}
+
+/*.add-package a.save{
 	background: #06be94;
 	color: #ffffff;
 	border: 1px solid #06be94;
@@ -419,4 +395,17 @@ textarea:focus{
 }
 .add-package a:hover.cancel{
 	border-color: #aaaaaa;
-}
+}*/
+
+/* 图标  */
+.operate{ padding: 20px 0;}
+.operate a{display: block;float: left; padding: 0 15px; height: 24px;line-height: 24px; border: 1px solid #E6EAEC;background: #FFFFFF;border-radius: 4px;margin-right: 15px;font-size: 12px;text-align: left;}
+.operate a i{width: 14px;display: block;height: 14px;float: left;margin:5px 8px 5px 0;} 
+.operate .back-icon i{background: url(../images/add-package/back-icon.png)no-repeat 0 0;background-size: 100%;}
+.operate .save-icon i{background: url(../images/add-package/back-icon.png)no-repeat 0 -29px;background-size: 100%;} 
+
+
+
+
+
+
