--- a/style/hospital.css
+++ b/style/hospital.css
@@ -1,6 +1,7 @@
 /*Reset*/
 @made by kami;
 @charset "utf-8";
+.content{margin:  2%;background: #FFFFFF;}
 
 .back{
 	width: 100%;
@@ -23,15 +24,14 @@
 }
 .page-name{
 	width: 100%;
-	height: auto;
-	background: #06be94;
-	color: #ffffff;
+	height: auto; 
+	color: #000;
 	font-size: 16px;
 	text-align: left;
 	text-indent: 15px;
 	line-height: 40px;
-	float: left;
-	margin-top: 10px;
+	float: left; 
+	border-bottom: 1px solid #E2E8EA;
 }
 .add-examination-item{
 	width: 1020px;
@@ -44,8 +44,7 @@
 	color: #ffffff;
 	border: 1px solid #06be94;
 	padding: 5px 20px;
-	border-radius: 5px;
-	margin-right: 200px;
+	border-radius: 5px; 
 }
 .add-examination-item .btns a:hover.save{
 	background: #16ad8a;
@@ -68,7 +67,7 @@
 	margin-top: 20px;
 }
 .add-examination-item .btns{
-	margin-top: 50px;
+	/*margin-top: 50px;*/
 }
 .add-examination-item .line .distance{
 	width: 130px;
@@ -242,25 +241,29 @@ input:focus.input{
 	height: auto;
 	float: left;
 	text-align: left;
-	line-height: 30px;
+	line-height: 30px;  
 }
-.nature label{
+.nature ul{margin: 0 5px;}
+.nature ul li{cursor: pointer;font-size: 13px;box-sizing: border-box;float: left;border: 1px solid #EFEFEF;color: #000000;border-radius: 5px;margin-right: 10px;padding: 3px 15px;background-color: #FFFFFF;}
+.nature ul li:hover{border-color: #4CA3DC;}
+.nature ul li.on{background: #4CA3DC;border-color: #4CA3DC;color: #fff;}
+/*.nature label{
 	float: left;
 	margin: 0 15px 0 5px;
 }
 .nature label input{
 	margin-right: 5px;
-}
+}*/
 .photo{
 	width: 530px;
 	float: left;
 	height: auto;
-	text-align: left;
+	text-align: left; 
 }
 .photo .img-list{
 	width: 100%;
-	height: auto;
-	float: left;
+	height: auto;  
+	margin: 20px 0;
 }
 .photo .img-box{
 	float: left;
@@ -275,7 +278,7 @@ input:focus.input{
 }
 .photo .img-box .del{
 	width: 100%;
-	height: 23px;
+	height: 100%;
 	position: absolute;
 	left: 0;
 	bottom: 0;
@@ -287,34 +290,40 @@ input:focus.input{
 	opacity: 0.3;
 	filter:alpha(opacity=30);
 	width: 100%;
-	height: 23px;
+	height: 100%;
 	overflow: hidden;
 }
 .photo .img-box .del a{
-	float: right;
-	width: 23px;
-	height: 23px;
-	text-align: left;
-	text-indent: -999px;
+	float: left;  
+	text-align: center; 
 	position: relative;
 	overflow: hidden;
-	background: url(../images/icon.png) no-repeat 3px -182px #06be94;
-	margin-top: -23px;
+	/*background: url(../images/icon.png) no-repeat 3px -182px #06be94;*/
+	margin-top: -50px;
+	margin-left: 35px;
+	border: 1px solid #FFFFFF;
+	color: #FFFFFF;
+	padding: 2px 12px;
+	border-radius: 10px;
+	font-size: 12px; 
 }
 .photo .add-photo{
-	width: 100%;
-	height: auto;
-	float: left;
+	margin: 20px 0;
+	width: 100%; 
 	color: #c9c9c9;
 	font-size: 12px;
-	margin-top: 10px;
-}
-.photo .add-photo li{
-	width: 100%;
-	height: auto;
-	float: left;
+	margin-top: 10px; 
 }
 .photo .add-photo a{
+	 margin-left: 5px;
+	 padding: 5px 15px 5px 40px;
+	 border: 1px solid #F4F4F4;
+	 border-radius: 8px;
+	 background: url(../images/hospital/upload-icon.png)no-repeat 15px 5px;
+	 background-size: 18%;
+}
+.photo .add-photo a:hover{border: 1px solid #06BE94;}
+/*.photo .add-photo a{
 	width: 67px;
 	padding-top: 48px;
 	background: url(../images/addphoto.gif) no-repeat 0 0;
@@ -327,4 +336,4 @@ input:focus.input{
 }
 .photo .add-photo a:hover{
 	color: #666;
-}
+}*/
