--- a/style/statistics.css
+++ b/style/statistics.css
@@ -1,21 +1,30 @@
 /*Reset*/
 @made by kami;
 @charset "utf-8";
+
+.content{padding: 0 2%;}
+
 .main-right .btns{
-	width: 100%;
-	height: auto;
-	float: left;
+	position: relative;
+	width: 100%;  
 	text-align: right;
-	padding: 20px 0;
+	padding: 20px 0;  
 }
 .main-right .btns a{
+	float: right;
+	box-sizing: border-box;
+	position: relative;
+	z-index: 5;
 	text-align: center;
 	color: #06be94;
 	border: 1px solid #e5e5e5;
 	border-radius: 5px;
 	margin: 0 10px;
-	padding: 3px 15px;
+	padding: 5px 15px; 
+	background-color: #FFFFFF;
+	font-size: 13px;
 }
+.main-right .btns .findmore{padding-left: 30px; float: left;color: #000000;background: url(../images/statistics/more.png)no-repeat 10px 6px;background-size: 15%;background-color: #FFFFFF;}
 .main-right .btns a:hover{
 	border-color: #06be94;
 }
@@ -28,7 +37,7 @@
 	width: 100%;
 	height: auto;
 	float: left;
-	padding: 20px 0;
+	padding: 20px 0; 
 }
 .box-name .people{
 	float: left;
@@ -38,31 +47,32 @@
 	float: left;
 	color: #f48964;
 }
-.box-name .now-data{
-	float: left;
-	width: 200px;
-	margin-left: 310px;
+.now-data{
+	position: absolute; 
+	text-align: center; 
+	/*background: #FFFFFF;*/  
+	width: 100%;  
+	z-index: 1;
 }
-.box-name .now-data .prev,.box-name .now-data .next{
+.main-right .btns .center{margin: 0 auto;width: 200px;background: #FFFFFF;padding: 5px 0;}
+.now-data .prev,.now-data .next{
 	width: 15px;
-	height: 15px;
-	float: left;
-	text-align: left;
-	text-indent: -999px;
+	height: 15px;   
 	overflow: hidden;
 	cursor: pointer;
-	margin-top: 2px;
+	margin-top: 2px; 
 }
-.box-name .now-data .prev{
-	background: url(../images/icon.png) no-repeat -137px -55px;
-}
-.box-name .now-data .next{
-	background: url(../images/icon.png) no-repeat -156px -55px;
-}
-.box-name .now-data .now-text{
-	width: 120px;
+.now-data .prev{
 	float: left;
+	background: url(../images/icon.png) no-repeat -137px -55px;
+	margin-left: 5px;
 }
+.now-data .next{
+	float: right;
+	background: url(../images/icon.png) no-repeat -156px -55px;
+	margin-right: 5px;
+}
+.now-data .now-text{}
 .main-right .statistics{
 	width: 100%;
 	height: auto;
