--- a/style/global.css
+++ b/style/global.css
@@ -142,7 +142,7 @@ a:hover.back-top span{
 	top: 0;
 	left: 0;
 	box-sizing: border-box;
-	/*width: 15%;*/
+	width: 15%;
 	width: 220px; 
 	padding: 0 0 65px 0;  
 	border-right: 1px solid #E3E9EB;
@@ -152,7 +152,7 @@ a:hover.back-top span{
 	display: block;
 	line-height: 50px;
 	text-align: left;
-	text-indent: 17%;
+	text-indent: 21%; 
 }
 .main-left .nav-list:hover{
 	color: #FFFFFF; 
@@ -168,7 +168,7 @@ a:hover.back-top span{
 .left-logo .line-height .logo-ft{line-height: 25px;}
 .left-logo .line-height img{width: 50%;}
 
-.main-left .nav-list span{padding: 6px 17px;margin-right: 2%; }
+.main-left .nav-list span{padding: 6px 14px;margin-right: 12px;  }
 .main-left .nav-list:nth-of-type(1) span{background: url(../images/common/list-logo.png)no-repeat 0 10px;}
 .main-left .nav-list:nth-of-type(2) span{background: url(../images/common/list-logo.png)no-repeat 0 -20px;}
 .main-left .nav-list:nth-of-type(3) span{background: url(../images/common/list-logo.png)no-repeat 0 -54px;}
