--- a/style/login.css
+++ b/style/login.css
@@ -63,24 +63,32 @@ input {
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { 
     display: block;
 }
+.clear{display:block;height:0;overflow:hidden;clear:both;}
+.clearfix:after{content:'\20';display:block;height:0;clear:both;}
+.clearfix{*zoom:1;}
 
 /* bg */  
-.bg{height: 1200px;width: 100%;background: url(../images/login/login-bg.png)no-repeat;background-size: auto 100%;background-position: center;}
+.bg{height: 100%;width: 100%;background: url(../images/login/login-bg.png)no-repeat;background-size: 100% 100%;background-position: center;}
 /* logo-box */
 .logo-box{position:relative;margin: 0 auto;text-align: center;font-size: 17px;line-height: 28px;}
 .logo-box-ct{position: absolute;left: 0;bottom: 30px; float:left;width: 100%;}
 
 /* userbox */
-.userbox{box-sizing: border-box;position:relative;z-index:1;width: 350px;padding: 15px 30px 30px 40px;background: #FFFFFF;margin: auto;font-size: 12px;box-shadow: 0 0 15px #CCCCCC;}
+.userbox{box-sizing: border-box;position:relative;z-index:1;width: 350px;padding: 15px 30px 30px 40px;background: #FFFFFF;margin: auto;font-size: 12px;box-shadow: 0 0 15px #CCCCCC;border-radius: 6px;}
 .userbox .box-name{font-size: 17px;margin: 10px 0 25px 0;text-align: center;}
 .userbox .item, .userbox .no-AccountNumber{position:relative;width: 100%;}
-.userbox .item input{box-sizing:border-box;border: 1px solid #DBDBDB;padding: 10px 15px;width: 100%;}
-.userbox .item .error-tips{color: red;height: 22px;}
+.userbox .item input[type=password], .userbox .item input[type=text], .userbox .item input[type=submit]{box-sizing:border-box;border: 1px solid #DBDBDB;padding: 10px 15px;width: 100%;border-radius: 6px;}
+.userbox .item input[type=submit]{cursor: pointer;} 
+.userbox .item .error-tips{color: red;height: 22px;padding-left: 16px;}
 .userbox .item .enter-btn{background: #00C687;color: #FFFFFF;margin: 15px 0;}
 .userbox .item .Code{width: 55%;}
 .userbox .no-AccountNumber{text-align: center;color: #000000;}
 .userbox .no-AccountNumber a{color: #3A99D8;}
 
 .wrap{width: 100%;}
-
-
+ 
+.forget .forgetPassword{float: right;}
+.forget .forgetPassword:hover{text-decoration: underline;color: red;}
+.forget .autoLogin{float: left;display: block;cursor: pointer;}
+.forget .autoLogin input[type=checkbox], .userbox .autoLogin label{float: left;}
+.forget .autoLogin input[type=checkbox]{margin-right: 5px;margin-top: 4px;}
